공지사항 페이지 ing, 홈 구조 개선, list 수정

--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -1,4 +1,3 @@
-
 body {
     min-width: 1200px; /* 고정 최소 너비 설정 */
 
@@ -46,6 +45,9 @@ body {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .read {
@@ -78,11 +80,11 @@ td > a {
 
 .checkBox {
     width: 30px;
+    padding-right: 0;
 }
 
 .form-check-input {
     margin-left: 0.75rem;
-    margin-right: 0.2rem;
 }
 
 .boardImg {
@@ -102,6 +104,10 @@ td > a {
 
 .listOne {
     width: auto;
+}
+
+.listPost {
+    padding-left: 10px;
 }
 
 .tag {
@@ -141,6 +147,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .secret {
@@ -155,6 +164,10 @@ td > a {
 
 .bi-file-lock {
     font-size: 20px;
+}
+
+.bi-file-earmark-image {
+    font-size: 18px;
 }
 
 .noSearch {
@@ -190,6 +203,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: red;
     --bs-btn-hover-bg: red;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: red;
+    --bs-btn-active-bg: red;
 }
 
 .page-item .page-link {
@@ -245,6 +261,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .searchForm .searchBtn:hover {
@@ -284,6 +303,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 div.text-muted {
@@ -300,6 +322,9 @@ div.text-muted {
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .boardInfo {
