--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -173,8 +173,16 @@ td {
 }
 
 .boardEmpty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 701px;
     text-align: center;
     color: gray;
+}
+
+.boardEmpty p {
+    font-size: 18px;
 }
     
 .loginId,
@@ -281,4 +289,12 @@ a {
 .showoffWriter {
     font-size: 13px;
     color: #919191;
+}
+
+tr {
+   height: 68.98px;
+}
+
+.homeList {
+    height: 53px;
 }
