--- a/src/main/resources/templates/my/userPostsActivity.html
+++ b/src/main/resources/templates/my/userPostsActivity.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-4 text-center align-content-center countPost3">
                 <a th:href="@{/my/userActivity/{userId}/scraps(userId=${userId})}">
-                    공감글 <span th:text="${responseDTO?.scrapCount}"></span>
+                    보관함 <span th:text="${responseDTO?.scrapCount}"></span>
                 </a>
             </div>
         </div> <!--상단-->
