--- a/src/main/resources/templates/my/userScrapsActivity.html
+++ b/src/main/resources/templates/my/userScrapsActivity.html
@@ -40,7 +40,7 @@
             </div>
             <div class="col-4 text-center align-content-center countScrap3">
                 <a th:href="@{/my/userActivity/{userId}/scraps(userId=${userId})}">
-                    공감글 <span th:text="${responseDTO?.scrapCount}"></span>
+                    보관함 <span th:text="${responseDTO?.scrapCount}"></span>
                 </a>
             </div>
         </div> <!--상단-->
