--- a/src/main/resources/templates/sample/notice.html
+++ b/src/main/resources/templates/sample/notice.html
@@ -35,23 +35,40 @@
                                         <div>3) 게시판의 성격에 맞지 않은 게시물</div><br>
                                         <div>4) 타인에 대한 악성 비방글, 심한 욕설, 비하 발언, 격한 표현</div><br>
                                         <div>5) 분란 야기, 갈등 조장, 정치 관련 게시글</div><br>
-                                        <div>6) 허위사실 유포</div><br>
+                                        <div>6) 허위사실 유포</div>
                                 </div>
-                                <div>2. 자유 게시판</div>
-                                <p>
-                                    - 자유 게시판은 내용, 형식과 상관없이 자유롭게 글을 주고 받는 게시판입니다.
-                                </p>
                             </div>
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="background-color: #efefef">
-                                    #2 레벨과 경험치
+                                    #2 등급과 경험치
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    레벨과 경험치
+                                    <div>- 경험치는 출석하면 2점, 게시물 작성 시마다 1점씩 부여됩니다.</div>
+                                    <div>- 등급표</div>
+                                    <div>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>2</td>
+                                                    <td>3</td>
+                                                    <td>4</td>
+                                                    <td>5</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>6</td>
+                                                    <td>7</td>
+                                                    <td>8</td>
+                                                    <td>9</td>
+                                                    <td>0</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -63,7 +80,12 @@
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    신고 및 제재
+                                    <div>※ 신고 ※</div><br>
+                                    <div>- 게시물 이용규칙을 위반한 게시물 또는 댓글은 다른 회원에 의해 신고가 가능합니다.</div><br>
+                                    <div>- 신고된 게시물 또는 댓글은 관리자에 의해 삭제될 수 있습니다.</div><br><br>
+                                    <div>※ 제재 ※</div><br>
+                                    <div>- 신고된 게시물 또는 댓글을 작성한 회원은 관리자에 의해 차단될 수 있습니다.</div><br>
+                                    <div>- 차단된 유저는 관리자가 복구하기 전까지 로그인을 할 수 없고, 동일한 이메일로 재가입이 불가능합니다.</div>
                                 </div>
                             </div>
                         </div>
@@ -75,7 +97,9 @@
                             </h2>
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    문의하기
+                                    <div></div><br>
+                                    <div></div><br>
+                                    <div></div><br>
                                 </div>
                             </div>
                         </div>
