--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -15,12 +15,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <div class="header-top">
-        <div class="log" style="width: 192px"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/logo.png}"
-                                                                          width="120" height="120"
-                                                                          alt="로고"></a></div>
-        <div class="title"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/title.png}" width="400"
-                                                       height="150"
-                                                       alt="타이틀"></a>
+        <div class="log" style="width: 192px"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/logo.png}" width="120" height="120" alt="로고"></a></div>
+        <div class="title"><a href="/sample/home">
+            <img class="bi me-2" th:src="@{/img/logo/title.png}" width="400" height="150" alt="타이틀"></a>
         </div>
         <div class="auth d-flex flex-column justify-content-between" id="auth">
             <!-- Thymeleaf 조건문을 사용하여 로그인 상태에 따라 다른 내용 표시 -->
