--- a/src/main/resources/templates/error/accessDenied.html
+++ b/src/main/resources/templates/error/accessDenied.html
@@ -19,7 +19,7 @@
             <h3 style="color: #67cafe">죄송합니다, 요청하신 페이지를 찾을 수 없습니다.</h3><br>
             <h3 style="color: #67cafe">링크가 잘못되었거나 페이지가 삭제되었습니다.</h3>
             <br>
-            <button type="button" class="home-button" th:onclick="|location.href='@{/sample/home}'|">
+            <button type="button" class="home-button" th:onclick="|location.href='@{/}'|">
                 홈으로 이동
             </button>
         </div>
