--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -16,10 +16,10 @@
 
     <div class="header">
     <div class="header-top">
-        <div class="log"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/logo.png}"
+        <div class="log"><a href="/"><img class="bi me-2" th:src="@{/img/logo/logo.png}"
                                                                           width="120" height="120"
                                                                           alt="로고"></a></div>
-        <div class="title"><a href="/sample/home"><img class="bi me-2" th:src="@{/img/logo/title.png}" width="400"
+        <div class="title"><a href="/"><img class="bi me-2" th:src="@{/img/logo/title.png}" width="400"
                                                        height="150"
                                                        alt="타이틀"></a>
         </div>
@@ -37,14 +37,14 @@
                 <a href="/my/user-detail">마이페이지</a>
                 <a href="javascript:void(0);" onclick="logout()">로그아웃</a>
             </span>
-                <a href="/sample/notice">공지사항</a>
+                <a href="/notice">공지사항</a>
             </div>
             <div class="d-flex justify-content-end"><img th:src="@{/img/logo/footprint.png}" width="50" alt="헤더이미지"
                                                          style="transform: rotate(20deg);" class="mx-3"></div>
         </div>
     </div>
     <div class="search-container">
-        <form class="input-group" style="width: 33%;" th:action="@{/sample/allSearch}" method="get">
+        <form class="input-group" style="width: 33%;" th:action="@{/allSearch}" method="get">
             <select class="form-select" name="type"
                     style="border: 3px solid #67cafe; border-radius: 0; border-right:0;">
                 <option value="tcu" th:selected="${SearchPageRequestDTO?.type == 'tcu'}">---</option>
@@ -77,7 +77,7 @@
     <div style="background-color: #67cafe;">
         <nav th:unless="${boardCode == 'general' or boardCode == 'showoff' or boardCode == 'tip' or boardCode == 'qna'}"
              style="height: 66px; margin-bottom: 20px;" class="d-flex justify-content-center">
-            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/sample/home}"
+            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/}"
                                                                          style="color: white;">홈</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a
                     th:href="@{/board/{boardCode}(boardCode=showoff)}" style="color: white;">자랑 게시판</a></span>
@@ -92,7 +92,7 @@
         <!-- 자랑 게시판 -->
         <nav th:if="${boardCode == 'showoff'}" style="margin-bottom: 20px; height: 66px;"
              class="d-flex justify-content-center">
-            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/sample/home}"
+            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/}"
                                                                          style="color: white;">홈</a></span>
             <span class="mx-5" style="border-bottom: 2px solid white; margin-top: 20px; height: 30px"><a
                     th:href="@{/board/{boardCode}(boardCode=showoff)}"
@@ -109,7 +109,7 @@
         <nav th:if="${boardCode == 'general'}" style="margin-bottom: 20px; height: 66px;"
              class="d-flex justify-content-center">
             <span class="mx-5" style="margin-top: 20px; height: 30px">
-                <a th:href="@{/sample/home}" style="color: white;">
+                <a th:href="@{/}" style="color: white;">
                     홈
                 </a>
             </span>
@@ -130,7 +130,7 @@
         <!-- 정보공유 게시판 -->
         <nav th:if="${boardCode == 'tip'}" style="margin-bottom: 20px; height: 66px;"
              class="d-flex justify-content-center">
-            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/sample/home}"
+            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/}"
                                                                          style="color: white;">홈</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a
                     th:href="@{/board/{boardCode}(boardCode=showoff)}" style="color: white;">자랑 게시판</a></span>
@@ -149,7 +149,7 @@
         <!-- QnA 게시판 -->
         <nav th:if="${boardCode == 'qna'}" style="margin-bottom: 20px; height: 66px;"
              class="d-flex justify-content-center">
-            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/sample/home}"
+            <span class="mx-5" style="margin-top: 20px; height: 30px"><a th:href="@{/}"
                                                                          style="color: white;">홈</a></span>
             <span class="mx-5" style="margin-top: 20px; height: 30px"><a
                     th:href="@{/board/{boardCode}(boardCode=showoff)}" style="color: white;">자랑 게시판</a></span>
