--- a/src/main/resources/templates/my/user-detail.html
+++ b/src/main/resources/templates/my/user-detail.html
@@ -74,7 +74,7 @@
                             수정
                         </button>
                         <button class="cancel-button btn mb-4"
-                                th:onclick="|location.href='@{/sample/home}'|">
+                                th:onclick="|location.href='@{/}'|">
                             <span>닫기</span>
                         </button>
                     </div>
