--- a/src/main/resources/templates/my/user-modify.html
+++ b/src/main/resources/templates/my/user-modify.html
@@ -138,7 +138,7 @@
                             저장
                         </button>
                         <button class="cancel-button btn mb-4"
-                                th:onclick="|location.href='@{/sample/home}'|">
+                                th:onclick="|location.href='@{/}'|">
                             <span>닫기</span>
                         </button>
                     </div>
