--- a/src/main/resources/templates/home/allSearch.html
+++ b/src/main/resources/templates/home/allSearch.html
@@ -14,7 +14,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- 사용자 정의 CSS 로드 -->
     <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <link rel="stylesheet" th:href="@{/css/sample/allSearch.css}">
+    <link rel="stylesheet" th:href="@{/css/home/allSearch.css}">
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- 부트스트랩 JS 로드 -->
