ReplyRepository BoardRepository ReportLogRepository UserService : 회원탈퇴 시 회원이 쓴 글이나 댓글에 받은 신고가 있으면 함께 삭제됨 회원수정 시 수의사 인증을 했으면 users_auth 테이블에 role도 들어가게 수정 join.html user-modify.html : 전화번호 모두 입력해야 넘어가게 required 붙임 MyPageController : 생각해보니 ROLE_USER에서 ROLE_VET으로 수의사 인증을 하면 쿠키를 한번 날려야해서 구현함 7/26_seulgi

--- a/src/main/resources/templates/my/user-modify.html
+++ b/src/main/resources/templates/my/user-modify.html
@@ -119,12 +119,12 @@
                             <label for="telMiddle"></label>
                             <input type="text" id="telMiddle" name="telMiddle" class="form-control form-width mx-1"
                                    maxlength="4"
-                                   oninput="formatTelInput()" style="width: 116px;">
+                                   oninput="formatTelInput()" style="width: 116px;" required>
                             <span class="align-self-center mx-1">-</span>
                             <label for="telSuffix"></label>
                             <input type="text" id="telSuffix" name="telSuffix" class="form-control form-width ms-2"
                                    maxlength="4"
-                                   oninput="formatTelInput()" style="width: 116px;">
+                                   oninput="formatTelInput()" style="width: 116px;" required>
                         </div>
                         <div id="telFeedback" class="feedback"></div>
                     </div>
