--- a/src/main/resources/templates/admin/block-list.html
+++ b/src/main/resources/templates/admin/block-list.html
@@ -99,7 +99,7 @@
                                             </div>
 
                                             <!--차단해제-->
-                                            <div class="d-flex flex-column justify-content-between">
+                                            <div class="justify-content-between align-content-center">
                                                 <button class="btn btn-warning fw-bold"
                                                         th:onclick="restoreUser([[${user.userId}]])">차단 해제
                                                 </button>
