--- a/src/main/resources/templates/admin/report-detail.html
+++ b/src/main/resources/templates/admin/report-detail.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" th:href="@{/css/admin/reportDetail.css}">
 
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
-    <title>Report Detail</title>
+    <title>말랑발자국 - 신고 상세</title>
 
 
 </head>
