--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/admin/adminlist.css}">
 
-    <title>Admin</title>
+    <title>말랑발자국 - 회원 목록</title>
 
 </head>
 <body>
