--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css//board/register.css}">
 
-    <title>Board modify</title>
+    <title>말랑발자국 - 글 수정</title>
 </head>
 
 <body>
