--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/board/register.css}">
 
-    <title>Board Register</title>
+    <title>말랑발자국 - 글 등록</title>
 </head>
 
 <body>
