--- a/src/main/resources/templates/report/reply-report.html
+++ b/src/main/resources/templates/report/reply-report.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/report/createReport.css}">
 
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
-    <title>Report Detail</title>
+    <title>말랑발자국 - 댓글 신고</title>
 
 
 </head>
