--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -57,6 +57,7 @@ body {
 #list {
     width: 1000px;
     height: 700px; /* 카드 크기 고정 */
+    box-shadow: 1px 1px 3px #dee2e6;
 }
 
 .list td {
@@ -66,6 +67,7 @@ body {
 #showOffList {
     width: 1000px;
     height: 700px; /* 카드 크기 고정 */
+    box-shadow: 1px 1px 3px #dee2e6;
 }
 
 .showOffList td {
@@ -235,9 +237,7 @@ td > a {
 }
 
 .searchForm .form-select {
-    border-radius: 0;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border-radius: 15px 0 0 15px;
     border: 1px solid #67cafe;
     border-right: none;
 }
@@ -251,14 +251,12 @@ td > a {
 }
 
 .searchForm .searchBtn {
-    border-radius: 0;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-radius: 0 15px 15px 0;
     border: 1px solid #67cafe;
     border-left: none;
     color: #000;
     background-color: #E8FFFF;
-    --bs-btn-hover-color: #000;
+    --bs-btn-hover-color: #fff;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
     --bs-btn-active-color: #000;
@@ -267,9 +265,7 @@ td > a {
 }
 
 .searchForm .searchBtn:hover {
-    border-radius: 0;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-radius: 0 15px 15px 0;
     border: 1px solid #67cafe;
     border-left: none;
     color: #000;
