--- a/src/main/resources/templates/admin/block-list.html
+++ b/src/main/resources/templates/admin/block-list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/admin/adminlist.css}">
 
-    <title>Admin</title>
+    <title>말랑발자국 - 차단 목록</title>
     <
 </head>
 <body>
