--- a/src/main/resources/templates/admin/report-list.html
+++ b/src/main/resources/templates/admin/report-list.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/admin/adminlist.css}">
 
-    <title>Admin</title>
+    <title>말랑발자국 - 신고 목록</title>
 
 
 
