--- a/src/main/resources/templates/error/accessDenied.html
+++ b/src/main/resources/templates/error/accessDenied.html
@@ -2,31 +2,32 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>말랑발자국 - 오류</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/error/accessDenied.css}">
 </head>
 <body>
-<div th:include="include/header :: header"></div>
+<!--header footer 필요성 확인 필요-->
+<!--<div th:include="include/header :: header"></div>-->
 
-<div class="container" style="height: 800px;">
-    <div class="d-flex justify-content-center align-items-center text-center" style="height: 800px;">
+<div class="container">
+    <div class="d-flex flex-column justify-content-center align-items-center text-center">
         <div>
-            <img class="mx-auto d-block" src="/img/board/no_search.png" alt="이미지 로드 실패" style="height: 300px; width: 300px;">
+            <img class="mx-auto d-block errorPage" src="/img/error/error_page.png" alt="이미지 로드 실패">
             <br>
-            <h3 style="color: #67cafe">죄송합니다, 요청하신 페이지를 찾을 수 없습니다.</h3><br>
-            <h3 style="color: #67cafe">링크가 잘못되었거나 페이지가 삭제되었습니다.</h3>
-            <br>
+            <h2><img class="errorIcon" src="/img/error/error_icon.png" alt="에러 아이콘">&nbsp; 요청하신 페이지를 찾을 수 없습니다.</h2><br>
+            <h5>※ 링크가 잘못되었거나 페이지가 삭제되었을 수 있습니다.</h5><br>
+            <hr>
+            <small>말랑발자국 홈으로 이동하시겠어요?</small><br>
             <button type="button" class="home-button" th:onclick="|location.href='@{/}'|">
-                홈으로 이동
+                말랑발자국 홈
             </button>
         </div>
     </div>
 </div>
-
+<!--<div th:include="include/footer :: footer"></div>-->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<div th:include="include/footer :: footer"></div>
 </body>
 </html>
