--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
-    <title>말랑발자국</title>
+    <title>말랑발자국 - 홈</title>
 </head>
 <body>
 <div th:include="include/header :: header"></div>
