--- a/src/main/resources/templates/my/userPostsActivity.html
+++ b/src/main/resources/templates/my/userPostsActivity.html
@@ -15,7 +15,7 @@
     <!--부트스트랩 아이콘 사이즈 조절-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
-    <title>MyPage</title>
+    <title>말랑발자국 - 내 활동</title>
 </head>
 <body>
 <div th:include="include/header :: header"></div>
